# Students

./: README.md  pyproject.toml
students/: schema.py
students/grades/: admin.py  models.py
students/grades/migrations/: 0001_initial.py  0002_remove_student_subject_alter_student_name_and_more.py
students/students/: settings.py  urls.py
