[tool.poetry]
name = "students"
version = "0.1.0"
description = "first project"
authors = ["uri ehrlich"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.3"
strawberry-graphql = "^0.197.0"
django-stubs = {extras = ["compatible-mypy"], version = "^4.2.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "students.students.settings"